--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/styled.css">
+    <link rel="stylesheet" href="./styled.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
     <title>src</title>
 </head>
 
@@ -15,7 +15,7 @@
     <header>
         <div id="header">
             <nav class="nav-header">
-                <img src="/src/img/place-label-service-logo.png" alt="">
+                <img src="img/place-label-service-logo.png" alt="">
                 <div class="nav-titles">
                     <a class="nav-items btn-sobre" href="#mostrar">Sobre</a>
                     <a class="nav-items" href="#footer">Contatos</a>
@@ -28,7 +28,7 @@
             <div class="menu-header">
                 
                 <div class="image-header">
-                    <img  src="/src/img/goomer-pratos-do-dia-cardapio-restaurante-como-montar.jpg" alt="">
+                    <img  src="img/goomer-pratos-do-dia-cardapio-restaurante-como-montar.jpg" alt="">
                 </div>
                 <header class="menu-sanduba-header">
                     <h2>Menu</h2>
@@ -83,8 +83,8 @@
                    Esse repellat, magnam facilis assumenda dolorem alias sequi id magni ipsa libero
                    maiores provident ducimus corporis quisquam placeat saepe numquam aperiam dicta aliquid nobis possimus cum delectus culpa. Sunt, rem!</p>
                 <div class="image-sobre">
-                    <img src="/src/img/restaurantes-fortaleza-17.jpg" alt=""> 
-                    <img src="/src/img/imagem-chef.jpg" alt="">
+                    <img src="img/restaurantes-fortaleza-17.jpg" alt=""> 
+                    <img src="img/imagem-chef.jpg" alt="">
                 </div>
 
             </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="menu card-all" data-title="pratos">
                 <div class="menu-card  card1 wrapers">
-                    <img src="/src/img/bean-stew-g4fed6ac23_1920.jpg" alt="">
+                    <img src="img/bean-stew-g4fed6ac23_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -107,7 +107,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all card1 wrapers" data-title="pratos">
-                    <img src="/src/img/food-g46ede7068_1920.jpg" alt="">
+                    <img src="img/food-g46ede7068_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -120,7 +120,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="pratos">
-                    <img src="/src/img/rice-dish-gcf6ff6e86_1920.jpg" alt="">
+                    <img src="img/rice-dish-gcf6ff6e86_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -133,7 +133,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="pratos">
-                    <img src="/src/img/barbecue-gbdb679972_1920.jpg" alt="">
+                    <img src="img/barbecue-gbdb679972_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -146,7 +146,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div> 
                 <div class="menu-card card-all card1 wrapers" data-title="pratos">
-                    <img src="/src/img/american-salad-gf1c0c8b7e_1920.jpg" alt="">
+                    <img src="img/american-salad-gf1c0c8b7e_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -159,7 +159,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>   
                 <div class="menu-card card-all wrapers" data-title="pratos">
-                    <img src="/src/img/stew-g789a3d8f0_1920.jpg" alt="">
+                    <img src="img/stew-g789a3d8f0_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -178,7 +178,7 @@
             </div>
             <div class="menu card card-all" data-title="sobremesa">
                 <div class="menu-card wrapers">
-                    <img src="/src/img/dessert-g403d3cb2c_1920.jpg" alt="">
+                    <img src="img/dessert-g403d3cb2c_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -191,7 +191,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="sobremesa">
-                    <img src="/src/img/dessert-g66ce03eab_1920.jpg" alt="">
+                    <img src="img/dessert-g66ce03eab_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -204,7 +204,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="sobremesa">
-                    <img src="/src/img/cake-gbc1d8d439_1920.jpg" alt="">
+                    <img src="img/cake-gbc1d8d439_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -216,7 +216,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="sobremesa">
-                    <img src="/src/img/bread-g342de1c57_1920.jpg" alt="">
+                    <img src="img/bread-g342de1c57_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -229,7 +229,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div> 
                 <div class="menu-card card-all wrapers" data-title="sobremesa">
-                    <img src="/src/img/baked-goods-g94fa47575_1920.jpg" alt="">
+                    <img src="img/baked-goods-g94fa47575_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -242,7 +242,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>   
                 <div class="menu-card card-all wrapers" data-title="sobremesa">
-                    <img src="/src/img/creme-caramel-ge8714a1fd_1920.jpg" alt="">
+                    <img src="img/creme-caramel-ge8714a1fd_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -261,7 +261,7 @@
             </div>
             <div class="menu card card-all" data-title="sopa">
                 <div class="menu-card wrapers">
-                    <img src="/src/img/goulash-soup-gea14b2286_1920.jpg" alt="">
+                    <img src="img/goulash-soup-gea14b2286_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -274,7 +274,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="sopa">
-                    <img src="/src/img/tomatoes-g79fa8497a_1920.jpg" alt="">
+                    <img src="img/tomatoes-g79fa8497a_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -287,7 +287,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="sopa">
-                    <img src="/src/img/instant-noodles-g66e3d4c97_1920.jpg" alt="">
+                    <img src="img/instant-noodles-g66e3d4c97_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -300,7 +300,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="sopa">
-                    <img src="/src/img/lentil-soup-gc4713fae6_1920.jpg" alt="">
+                    <img src="img/lentil-soup-gc4713fae6_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -314,7 +314,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div> 
                 <div class="menu-card card-all wrapers" data-title="sopa">
-                    <img src="/src/img/sapporo-soup-curry-g4a3295e0b_1920.jpg" alt="">
+                    <img src="img/sapporo-soup-curry-g4a3295e0b_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -327,7 +327,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>   
                 <div class="menu-card card-all wrapers" data-title="sopa">
-                    <img src="/src/img/soup-g8ebad4c20_1920.jpg" alt="">
+                    <img src="img/soup-g8ebad4c20_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -346,7 +346,7 @@
             </div>
             <div class="menu card card-all" data-title="carnes">
                 <div class="menu-card wrapers">
-                    <img src="/src/img/salmon-g0726b0754_1920.jpg" alt="">
+                    <img src="img/salmon-g0726b0754_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -359,7 +359,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="carnes">
-                    <img src="/src/img/costeleta-de-cordeiro-alla-vecchia-cucina-com-gnocchi-na-manteiga-sálvia-e-parmesão-750x500.jpg" alt="">
+                    <img src="img/costeleta-de-cordeiro-alla-vecchia-cucina-com-gnocchi-na-manteiga-sálvia-e-parmesão-750x500.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -372,7 +372,7 @@
                     <button class="btn2">Adicionar</button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="carnes">
-                    <img src="/src/img/asparagus-g1be0b16ba_1920.jpg" alt="">
+                    <img src="img/asparagus-g1be0b16ba_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -385,7 +385,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>    
                 <div class="menu-card card-all wrapers" data-title="carnes">
-                    <img src="/src/img/steak-g2761db77f_1920.jpg" alt="">
+                    <img src="img/steak-g2761db77f_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -399,7 +399,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div> 
                 <div class="menu-card card-all wrapers" data-title="carnes">
-                    <img src="/src/img/grilled-chicken-g98ac4fc20_1920.jpg" alt="">
+                    <img src="img/grilled-chicken-g98ac4fc20_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -412,7 +412,7 @@
                     <button class="btn2">Adicionar</i></button>
                 </div>   
                 <div class="menu-card card-all wrapers" data-title="carnes">
-                    <img src="/src/img/sushi-gb6074e526_1920.jpg" alt="">
+                    <img src="img/sushi-gb6074e526_1920.jpg" alt="">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -443,6 +443,6 @@
         </div>
     </footer>
 
-    <script src="./js/interactive.js"></script>
+    <script src="./interactive.js"></script>
 </body>
 </html>
