--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styled.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
-    <title>src</title>
+    <title>Restaurante La Place</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 
                 
                 <header class="menu-sanduba-header menu-bar">
-                    <h2>Menu</h2>
+                    <h2>Cardápio</h2>
                 </header> 
 
 
