--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                     <h2 class="card-title">Feijoada</h2>
                     <p>R$ 9.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all card1" data-title="pratos principais">
                     <img src="img/food-g46ede7068_1920.jpg" alt="">
@@ -122,7 +122,7 @@
                     </div>
                     <h2 class="card-title">Lasanha</h2>
                     <p>R$ 15.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all" data-title="pratos principais">
                     <img src="img/rice-dish-gcf6ff6e86_1920.jpg" alt="">
@@ -135,7 +135,7 @@
                     </div>
                     <h2 class="card-title">Arroz com frango</h2>
                     <p>R$ 12.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>    
                 <div class="menu-card card-all" data-title="pratos principais">
                     <img src="img/barbecue-gbdb679972_1920.jpg" alt="">
@@ -148,7 +148,7 @@
                     </div>
                     <h2 class="card-title">Churrasco</h2>
                     <p>R$ 19.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div> 
                 <div class="menu-card card-all card1" data-title="pratos principais">
                     <img src="img/american-salad-gf1c0c8b7e_1920.jpg" alt="">
@@ -161,7 +161,7 @@
                     </div>
                     <h2 class="card-title">Salada de maionese</h2>
                     <p>R$ 9.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>   
                 <div class="menu-card card-all" data-title="pratos principais">
                     <img src="img/stew-g789a3d8f0_1920.jpg" alt="">
@@ -174,7 +174,7 @@
                     </div>
                     <h2 class="card-title">Moqueca</h2>
                     <p>R$ 14.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
             </div>
             <div class="menu2 card card-all" id="menu2" data-title="sobremesas">
@@ -193,7 +193,7 @@
                     </div>
                     <h2 class="card-title">Sorvete Bagas coloridas</h2>
                     <p>R$ 11.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all" data-title="sobremesas">
                     <img src="img/dessert-g66ce03eab_1920.jpg" alt="">
@@ -206,7 +206,7 @@
                     </div>
                     <h2 class="card-title">Iorgute com frutas</h2>
                     <p>R$ 8.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all" data-title="sobremesas">
                     <img src="img/cake-gbc1d8d439_1920.jpg" alt="">
@@ -219,7 +219,7 @@
                     </div>
                     <h2 class="card-title">Torta doce com frutas</h2>
                     <p>R$ 19.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>    
                 <div class="menu-card card-all" data-title="sobremesas">
                     <img src="img/bread-g342de1c57_1920.jpg" alt="">
@@ -232,7 +232,7 @@
                     </div>
                     <h2 class="card-title">Croissants</h2>
                     <p>R$ 9.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div> 
                 <div class="menu-card card-all" data-title="sobremesas">
                     <img src="img/baked-goods-g94fa47575_1920.jpg" alt="">
@@ -245,7 +245,7 @@
                     </div>
                     <h2 class="card-title">Bens cozidos com amora</h2>
                     <p>R$ 13.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>   
                 <div class="menu-card card-all" data-title="sobremesas">
                     <img src="img/creme-caramel-ge8714a1fd_1920.jpg" alt="">
@@ -258,7 +258,7 @@
                     </div>
                     <h2 class="card-title">Quindim de caramelo</h2>
                     <p>R$ 14.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
             </div>
             <div class="menu3 card card-all" id="menu3" data-title="porções - sopas">
@@ -277,7 +277,7 @@
                     </div>
                     <h2 class="card-title">Sopa de Goulash</h2>
                     <p>R$ 11.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all" data-title="porções - sopas">
                     <img src="img/tomatoes-g79fa8497a_1920.jpg" alt="">
@@ -290,7 +290,7 @@
                     </div>
                     <h2 class="card-title">Sopa de tomate</h2>
                     <p>R$ 9.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all" data-title="porções - sopas">
                     <img src="img/instant-noodles-g66e3d4c97_1920.jpg" alt="">
@@ -303,7 +303,7 @@
                     </div>
                     <h2 class="card-title">Ramen</h2>
                     <p>R$ 12.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>    
                 <div class="menu-card card-all" data-title="porções - sopas">
                     <img src="img/lentil-soup-gc4713fae6_1920.jpg" alt="">
@@ -317,7 +317,7 @@
                     </div>
                     <h2 class="card-title">Sopa de lentilha</h2>
                     <p>R$ 9.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div> 
                 <div class="menu-card card-all" data-title="porções - sopas">
                     <img src="img/sapporo-soup-curry-g4a3295e0b_1920.jpg" alt="">
@@ -330,7 +330,7 @@
                     </div>
                     <h2 class="card-title">Sapporo ao carry</h2>
                     <p>R$ 15.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>   
                 <div class="menu-card card-all" data-title="porções - sopas">
                     <img src="img/soup-g8ebad4c20_1920.jpg" alt="">
@@ -343,7 +343,7 @@
                     </div>
                     <h2 class="card-title">Sopa de abóbora</h2>
                     <p>R$ 9.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
             </div>
             <div class="menu4 card card-all" id="menu4" data-title="recomendações do chefe">
@@ -362,7 +362,7 @@
                     </div>
                     <h2 class="card-title">Salmão grelhado</h2>
                     <p>R$ 24.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all" data-title="recomendações do chefe">
                     <img src="img/costeleta-de-cordeiro-alla-vecchia-cucina-com-gnocchi-na-manteiga-sálvia-e-parmesão-750x500.jpg" alt="">
@@ -375,7 +375,7 @@
                     </div>
                     <h2 class="card-title">Costela de cordeiro</h2>
                     <p>R$ 29.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
                 <div class="menu-card card-all" data-title="recomendações do chefe">
                     <img src="img/asparagus-g1be0b16ba_1920.jpg" alt="">
@@ -388,7 +388,7 @@
                     </div>
                     <h2 class="card-title">Bife de Vitela</h2>
                     <p>R$ 34.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>    
                 <div class="menu-card card-all" data-title="recomendações do chefe">
                     <img src="img/steak-g2761db77f_1920.jpg" alt="">
@@ -402,7 +402,7 @@
                     </div>
                     <h2 class="card-title">Bife ao molho</h2>
                     <p>R$ 24.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div> 
                 <div class="menu-card card-all" data-title="recomendações do chefe">
                     <img src="img/grilled-chicken-g98ac4fc20_1920.jpg" alt="">
@@ -415,7 +415,7 @@
                     </div>
                     <h2 class="card-title">Frango grelhado</h2>
                     <p>R$ 19.99</p>
-                    <button class="btn2">Adicionar</i></button>
+                    <button class="btn2">comprar</i></button>
                 </div>   
                 <div class="menu-card card-all" data-title="recomendações do chefe">
                     <img src="img/sushi-gb6074e526_1920.jpg" alt="">
@@ -428,7 +428,7 @@
                     </div>
                     <h2 class="card-title">Sushi</h2>
                     <p>R$ 39.99</p>
-                    <button class="btn2">Adicionar</button>
+                    <button class="btn2">comprar</button>
                 </div>    
             </div>
         </section>
@@ -436,9 +436,6 @@
     <footer id="footer">
         <div class="nav-footer">
             <a class="nav-items-footer" href="index.html">Home</a>
-            <a class="nav-items-footer btn-sobre" href="#mostrar">Sobre</a>
-            <a class="nav-items-footer" href="#menu">Menu</a>
-            
             <div class="social-media">
                 <i class="fa-brands social-items fa-square-facebook media"></i>
                 <i class="fa-brands social-items fa-linkedin media"></i>
